fix layout spacing

--- a/src/style.css
+++ b/src/style.css
@@ -83,7 +83,7 @@ body {
   width: 100%;
   max-width: 1200px;
   height: 60%;
-  margin-top: 30px;
+  margin-top: 60px;
 }
 .viewport .buttons {
   -webkit-box-orient: vertical;
